--- a/LAF.Cadastros/src/LAF.Cadastros.Repository/LAF.Cadastros.Repository.csproj
+++ b/LAF.Cadastros/src/LAF.Cadastros.Repository/LAF.Cadastros.Repository.csproj
@@ -8,4 +8,9 @@
     <ProjectReference Include="..\LAF.Cadastros.Domain\LAF.Cadastros.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper.FluentMap.Dommel" Version="2.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
 </Project>
