--- a/LAF.Cadastros/src/LAF.Cadastros.API/LAF.Cadastros.API.csproj
+++ b/LAF.Cadastros/src/LAF.Cadastros.API/LAF.Cadastros.API.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.25" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LAF.Cadastros.Domain\LAF.Cadastros.Domain.csproj" />
     <ProjectReference Include="..\LAF.Cadastros.IoC\LAF.Cadastros.IoC.csproj" />
   </ItemGroup>
